--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "devDependencies": {
-        "gulp": "^3.8.8",
-        "gulp-autoprefixer": "^1.0.1",
-        "gulp-coffee": "^2.2.0",
-        "gulp-concat": "^2.4.1",
-        "gulp-less": "^1.3.6",
-        "gulp-load-plugins": "^0.7.0",
-        "gulp-minify-css": "^0.3.10",
-        "gulp-notify": "^1.8.0",
-        "gulp-phpspec": "^0.3.0",
-        "gulp-phpunit": "^0.6.3",
-        "gulp-rev": "^1.1.0",
-        "gulp-ruby-sass": "^0.7.1",
-        "gulp-run": "^1.6.4",
-        "gulp-uglify": "^1.0.1",
-        "install": "^0.1.7",
-        "merge-stream": "^0.1.6",
-        "npm": "^2.1.2",
-        "require-dir": "^0.1.0",
-        "underscore": "^1.7.0",
-        "gulp-shell": "^0.2.9"
-    }
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-clean": "^0.3.1",
+    "gulp-coffee": "^2.2.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-less": "^1.3.6",
+    "gulp-load-plugins": "^0.7.0",
+    "gulp-minify-css": "^0.3.10",
+    "gulp-notify": "^1.8.0",
+    "gulp-phpspec": "^0.3.0",
+    "gulp-phpunit": "^0.6.3",
+    "gulp-rev": "^1.1.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-run": "^1.6.4",
+    "gulp-shell": "^0.2.9",
+    "gulp-uglify": "^1.0.1",
+    "install": "^0.1.7",
+    "merge-stream": "^0.1.6",
+    "npm": "^2.1.2",
+    "require-dir": "^0.1.0",
+    "underscore": "^1.7.0"
+  }
 }
