--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "autoload": {
+        "files": [
+            "helpers.php"
+        ],
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
