--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
-    "devDependencies": {
+    "name": "laravel-elixir",
+    "version": "0.2.2",
+    "description": "Laravel Elixir Core",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/laravel/elixir"
+    },
+    "keywords": [
+        "laravel",
+        "elixir",
+        "gulp"
+    ],
+    "author": "Taylor Otwell, Jeffrey Way",
+    "license": "MIT",
+    "homepage": "https://github.com/laravel/elixir",
+    "dependencies": {
         "del": "^0.1.3",
-        "gulp": "^3.8.8",
         "gulp-autoprefixer": "^1.0.1",
         "gulp-coffee": "^2.2.0",
         "gulp-concat": "^2.4.1",
@@ -21,5 +39,8 @@
         "npm": "^2.1.2",
         "require-dir": "^0.1.0",
         "underscore": "^1.7.0"
+    },
+    "devDependencies": {
+        "gulp": "^3.8.8"
     }
 }
