--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel-elixir",
-    "version": "0.5.3",
+    "version": "0.5.4",
     "description": "Laravel Elixir Core",
     "main": "index.js",
     "scripts": {
@@ -35,6 +35,7 @@
         "gulp-shell": "^0.2.9",
         "gulp-uglify": "^1.0.1",
         "gulp-util": "^3.0.1",
+        "gulp-filter": "^1.0.2",
         "install": "^0.1.7",
         "npm": "^2.1.2",
         "require-dir": "^0.1.0",
