--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-    "name": "laravel-elixir",
-    "version": "0.6.5",
-    "description": "Laravel Elixir Core",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/laravel/elixir"
-    },
-    "keywords": [
-        "laravel",
-        "elixir",
-        "gulp"
-    ],
-    "author": "Taylor Otwell, Jeffrey Way",
-    "license": "MIT",
-    "homepage": "https://github.com/laravel/elixir",
-    "dependencies": {
-        "del": "^0.1.3",
-        "gulp-autoprefixer": "^1.0.1",
-        "gulp-coffee": "^2.2.0",
-        "gulp-concat": "^2.4.1",
-        "gulp-if": "^1.2.5",
-        "gulp-less": "^1.3.6",
-        "gulp-load-plugins": "^0.7.0",
-        "gulp-minify-css": "^0.3.10",
-        "gulp-notify": "^1.8.0",
-        "gulp-phpspec": "^0.3.0",
-        "gulp-phpunit": "^0.6.3",
-        "gulp-rev": "^2.0.0",
-        "gulp-sass": "^1.1.0",
-        "gulp-shell": "^0.2.9",
-        "gulp-uglify": "^1.0.1",
-        "gulp-util": "^3.0.1",
-        "gulp-filter": "^1.0.2",
-        "install": "^0.1.7",
-        "npm": "^2.1.2",
-        "main-bower-files": "^2.4.0",
-        "require-dir": "^0.1.0",
-        "underscore": "^1.7.0",
-        "run-sequence": "^1.0.1"
-    },
-    "devDependencies": {
-        "gulp": "^3.8.8"
-    }
+  "name": "laravel-elixir",
+  "version": "0.6.6",
+  "description": "Laravel Elixir Core",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/laravel/elixir"
+  },
+  "keywords": [
+    "laravel",
+    "elixir",
+    "gulp"
+  ],
+  "author": "Taylor Otwell, Jeffrey Way",
+  "license": "MIT",
+  "homepage": "https://github.com/laravel/elixir",
+  "dependencies": {
+    "del": "^0.1.3",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-coffee": "^2.2.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-filter": "^1.0.2",
+    "gulp-if": "^1.2.5",
+    "gulp-less": "^1.3.6",
+    "gulp-load-plugins": "^0.7.0",
+    "gulp-minify-css": "^0.3.10",
+    "gulp-notify": "^1.8.0",
+    "gulp-phpspec": "^0.3.0",
+    "gulp-phpunit": "^0.6.3",
+    "gulp-rename": "^1.2.0",
+    "gulp-rev": "^2.0.0",
+    "gulp-sass": "^1.1.0",
+    "gulp-shell": "^0.2.9",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "install": "^0.1.7",
+    "main-bower-files": "^2.4.0",
+    "npm": "^2.1.2",
+    "parse-filepath": "^0.5.0",
+    "require-dir": "^0.1.0",
+    "run-sequence": "^1.0.1",
+    "underscore": "^1.7.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.8"
+  }
 }
