--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-rev": "^2.0.0",
     "gulp-sass": "^1.1.0",
     "gulp-shell": "^0.2.9",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "install": "^0.1.7",
