--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "0.10.7",
+  "version": "0.12.0",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^2.0.0",
     "gulp-sass": "^1.1.0",
+    "gulp-ruby-sass": "^1.0.0-alpha.3",
     "gulp-shell": "^0.2.9",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.1",
