--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-util": "^3.0.1",
     "install": "^0.1.7",
     "main-bower-files": "^2.4.0",
+    "merge-stream": "^0.1.7",
     "npm": "^2.1.2",
     "parse-filepath": "^0.5.0",
     "require-dir": "^0.1.0",
