--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "0.14.3",
+  "version": "0.15.0",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,8 @@
   "license": "MIT",
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
+    "babelify": "^5.0.4",
+    "browserify": "^9.0.4",
     "del": "^0.1.3",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-coffee": "^2.2.0",
@@ -35,8 +37,8 @@
     "gulp-phpunit": "^0.6.3",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^2.0.0",
-    "gulp-sass": "^1.1.0",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-sass": "^1.1.0",
     "gulp-shell": "^0.2.9",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.1",
@@ -46,10 +48,12 @@
     "merge-stream": "^0.1.7",
     "npm": "^2.1.2",
     "parse-filepath": "^0.5.0",
+    "reactify": "^1.1.0",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.1",
     "underscore": "^1.7.0",
-    "vinyl-paths": "^1.0.0"
+    "vinyl-paths": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "gulp": "^3.8.8"
