--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-concat": "^2.4.1",
     "gulp-filter": "^1.0.2",
     "gulp-if": "^1.2.5",
-    "gulp-less": "^1.3.6",
+    "gulp-less": "^3.0.2",
     "gulp-load-plugins": "^0.7.0",
     "gulp-minify-css": "^0.3.10",
     "gulp-notify": "^1.8.0",
@@ -37,7 +37,7 @@
     "gulp-phpunit": "^0.6.3",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^2.0.0",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-ruby-sass": "^1.0.1",
     "gulp-sass": "^1.1.0",
     "gulp-shell": "^0.2.9",
     "gulp-sourcemaps": "^1.3.0",
