--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "browserify": "^9.0.4",
     "del": "^0.1.3",
     "gulp-autoprefixer": "^1.0.1",
+    "gulp-babel": "^5.1.0",
     "gulp-coffee": "^2.2.0",
     "gulp-concat": "^2.4.1",
     "gulp-filter": "^1.0.2",
@@ -51,9 +52,9 @@
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.1",
     "underscore": "^1.7.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-paths": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "vinyl-buffer": "^1.0.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "gulp": "^3.8.8"
