--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "merge-stream": "^0.1.7",
     "npm": "^2.1.2",
     "parse-filepath": "^0.5.0",
+    "partialify": "^3.1.3",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.1",
     "underscore": "^1.7.0",
