--- a/package.json
+++ b/package.json
@@ -21,41 +21,38 @@
   "license": "MIT",
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
-    "babelify": "^6.0.0",
-    "browserify": "^9.0.4",
-    "del": "^0.1.3",
-    "gulp-autoprefixer": "^1.0.1",
+    "babelify": "^6.1.3",
+    "browserify": "^10.2.6",
+    "del": "^1.2.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
-    "gulp-coffee": "^2.2.0",
-    "gulp-concat": "^2.4.1",
-    "gulp-filter": "^1.0.2",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
-    "gulp-less": "^3.0.2",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-minify-css": "^0.3.10",
-    "gulp-notify": "^1.8.0",
-    "gulp-phpspec": "^0.4.2",
-    "gulp-phpunit": "^0.6.3",
-    "gulp-rename": "^1.2.0",
-    "gulp-rev": "^2.0.0",
-    "gulp-ruby-sass": "^1.0.1",
-    "gulp-sass": "^2.0.0",
-    "gulp-shell": "^0.2.9",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "install": "^0.1.7",
-    "merge-stream": "^0.1.7",
-    "npm": "^2.1.2",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-phpspec": "^0.5.3",
+    "gulp-phpunit": "^0.8.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^5.1.0",
+    "gulp-sass": "^2.0.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.2.4",
+    "merge-stream": "^0.1.8",
     "parse-filepath": "^0.5.0",
     "partialify": "^3.1.3",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.1",
-    "underscore": "^1.7.0",
+    "path": "^0.11.14",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.1",
+    "underscore": "^1.8.3",
+    "underscore-deep-extend": "0.0.5",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2"
+    "watchify": "^3.2.3"
   },
   "devDependencies": {
     "gulp": "^3.8.8"
