--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "underscore": "^1.8.3",
     "underscore-deep-extend": "0.0.5",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.3"
   },
