--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "3.0.0-beta2",
+  "version": "3.0.0",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
