--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "watchify": "^3.2.3"
   },
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5",
+    "rimraf": "^2.4.2"
   }
 }
