--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "del": "^1.2.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
+    "gulp-batch": "^1.0.5",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^1.2.5",
