--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
     "del": "^1.2.0",
+    "glob": "^5.0.14",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
     "gulp-coffee": "^2.3.1",
