--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "3.2.1",
+  "version": "3.2.3",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
     "del": "^1.2.0",
+    "glob": "^5.0.14",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^5.1.0",
     "gulp-coffee": "^2.3.1",
@@ -37,6 +38,7 @@
     "gulp-phpunit": "^0.8.4",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.1.0",
+    "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
