--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
+    "browser-sync": "^2.7.10",
     "del": "^1.2.0",
     "glob": "^5.0.14",
     "gulp-autoprefixer": "^2.3.1",
