--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "3.4.0",
+  "version": "3.4.1",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,8 @@
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
     "babelify": "^6.1.3",
-    "browserify": "^10.2.6",
     "browser-sync": "^2.7.10",
+    "browserify": "^10.2.6",
     "del": "^1.2.0",
     "glob": "^5.0.14",
     "gulp-autoprefixer": "^2.3.1",
@@ -46,6 +46,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
+    "insert-css": "^0.2.0",
     "merge-stream": "^0.1.8",
     "parse-filepath": "^0.5.0",
     "partialify": "^3.1.3",
@@ -57,6 +58,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "vueify": "^1.1.5",
     "watchify": "^3.2.3"
   },
   "devDependencies": {
