--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "glob": "^5.0.14",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^6.1.0",
+    "babel-preset-es2015": "^6.1.0",
     "gulp-batch": "^1.0.5",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
