--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "4.0.2",
+  "version": "4.0.4",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^6.1.0",
     "babel-preset-es2015": "^6.1.0",
+    "babel-preset-react": "^6.1.18",
     "gulp-batch": "^1.0.5",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
