Fix matches multiple files and unnecessary indent_style

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,5 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.json,*.yml]
-indent_style = space
+[*.{json,yml}]
 indent_size = 2
