--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "Laravel Elixir Core",
   "main": "index.js",
   "scripts": {
@@ -39,7 +39,7 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-phpspec": "^0.5.3",
-    "gulp-phpunit": "0.9.0",
+    "gulp-phpunit": "0.11.x",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.1.0",
     "gulp-rev-replace": "^0.4.2",
