--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "gulp-batch": "^1.0.5",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.0.0",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-minify-css": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-phpspec": "^0.5.3",
     "gulp-phpunit": "0.11.x",
