--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-shell": ^0.5.0,
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
