--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   "license": "MIT",
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
+    "babel-preset-es2015": "^6.1.0",
+    "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "browser-sync": "^2.7.10",
     "browserify": "^11.2.0",
+    "clean-css": "^3.4.10",
     "del": "^1.2.0",
     "glob": "^5.0.14",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^6.1.0",
-    "babel-preset-es2015": "^6.1.0",
-    "babel-preset-react": "^6.1.18",
     "gulp-batch": "^1.0.5",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.0.0",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
@@ -42,8 +42,8 @@
     "gulp-rev": "^5.1.0",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.0.3",
-    "gulp-sourcemaps": "^1.5.2",
     "gulp-shell": "^0.5.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
@@ -57,6 +57,7 @@
     "underscore": "^1.8.3",
     "underscore-deep-extend": "0.0.5",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-map": "^1.0.1",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.3"
