--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-elixir",
-  "version": "5.0.0",
+  "version": "6.0.0-0",
   "description": "Laravel Elixir Core",
   "main": "dist/index.js",
   "scripts": {
