Update npm dependencies
This closes #487

--- a/package.json
+++ b/package.json
@@ -23,51 +23,51 @@
   "license": "MIT",
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
-    "babel-preset-es2015": "^6.1.0",
-    "babel-preset-react": "^6.1.18",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
-    "browser-sync": "^2.7.10",
-    "browserify": "^11.2.0",
-    "clean-css": "^3.4.10",
-    "del": "^1.2.0",
-    "glob": "^5.0.14",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-babel": "^6.1.0",
+    "browser-sync": "^2.12.3",
+    "browserify": "^13.0.0",
+    "clean-css": "^3.4.12",
+    "del": "^2.2.0",
+    "glob": "^7.0.3",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-batch": "^1.0.5",
     "gulp-concat": "^2.6.0",
-    "gulp-if": "^1.2.5",
-    "gulp-less": "^3.0.3",
-    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-if": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-load-plugins": "^1.2.2",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^5.1.0",
-    "gulp-rev-replace": "^0.4.2",
-    "gulp-sass": "^2.0.3",
-    "gulp-shell": "^0.5.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.2.4",
+    "gulp-rev": "^7.0.0",
+    "gulp-rev-replace": "^0.4.3",
+    "gulp-sass": "^2.3.1",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
     "insert-css": "^0.2.0",
-    "merge-stream": "^0.1.8",
-    "parse-filepath": "^0.5.0",
-    "partialify": "^3.1.3",
-    "path": "^0.11.14",
+    "merge-stream": "^1.0.0",
+    "parse-filepath": "^1.0.1",
+    "partialify": "^3.1.6",
+    "path": "^0.12.7",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.1",
+    "run-sequence": "^1.1.5",
     "underscore": "^1.8.3",
-    "underscore-deep-extend": "0.0.5",
+    "underscore-deep-extend": "1.0.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-map": "^1.0.1",
-    "vinyl-paths": "^1.0.0",
+    "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.3"
+    "watchify": "^3.7.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "chai": "^3.2.0",
-    "gulp": "^3.8.8",
-    "mocha": "^2.2.5",
-    "rimraf": "^2.4.2"
+    "babel-cli": "^6.7.7",
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "mocha": "^2.4.5",
+    "rimraf": "^2.5.2"
   }
 }
