--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
   "license": "MIT",
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
     "browser-sync": "^2.12.3",
-    "browserify": "^13.0.0",
     "clean-css": "^3.4.12",
     "del": "^2.2.0",
     "glob": "^7.0.3",
@@ -51,17 +47,13 @@
     "insert-css": "^0.2.0",
     "merge-stream": "^1.0.0",
     "parse-filepath": "^1.0.1",
-    "partialify": "^3.1.6",
     "path": "^0.12.7",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
     "underscore": "^1.8.3",
     "underscore-deep-extend": "1.0.4",
-    "vinyl-buffer": "^1.0.0",
     "vinyl-map": "^1.0.1",
-    "vinyl-paths": "^2.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "vinyl-paths": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
