--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
     "browser-sync": "^2.12.3",
+    "buble": "^0.8.4",
     "clean-css": "^3.4.12",
     "del": "^2.2.0",
     "glob": "^7.0.3",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
     "gulp-batch": "^1.0.5",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
@@ -38,17 +38,18 @@
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
+    "gulp-rollup": "^1.9.0",
     "gulp-sass": "^2.3.1",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "insert-css": "^0.2.0",
-    "merge-stream": "^1.0.0",
     "parse-filepath": "^1.0.1",
     "path": "^0.12.7",
     "require-dir": "^0.3.0",
+    "rollup-plugin-buble": "^0.8.0",
+    "rollup-plugin-commonjs": "^2.2.1",
     "run-sequence": "^1.1.5",
     "underscore": "^1.8.3",
     "underscore-deep-extend": "1.0.4",
