--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "compile": "babel --presets=es2015 -d dist/ src/",
-    "test": "cd elixir-test-app && mocha --compilers js:babel-core/register",
+    "test": "npm run compile && cd elixir-test-app && mocha --compilers js:babel-core/register",
     "prepublish": "npm run compile"
   },
   "repository": {
