--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
     "browser-sync": "^2.12.3",
-    "buble": "^0.7.0",
-    "buble-loader": "^0.2.1",
     "clean-css": "^3.4.12",
     "cli-table": "^0.3.1",
     "del": "^2.2.0",
@@ -45,7 +43,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
     "parse-filepath": "^1.0.1",
     "path": "^0.12.7",
     "q": "^1.4.1",
@@ -53,9 +50,7 @@
     "run-sequence": "^1.1.5",
     "underscore": "^1.8.3",
     "underscore-deep-extend": "1.0.4",
-    "vinyl-map": "^1.0.1",
-    "webpack": "^2.1.0-beta",
-    "webpack-stream": "^3.2.0"
+    "vinyl-map": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
