--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "compile": "babel --presets=es2015 -d dist/ src/",
-    "test": "cd elixir-test-app && mocha --compilers js:babel-core/register",
+    "test": "cd elixir-test-app && mocha --require babel-core/register --require=test/bootstrap.js",
     "prepublish": "npm run compile"
   },
   "repository": {
@@ -55,6 +55,12 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
+    "laravel-elixir-browserify-official": "^0.1.3",
+    "laravel-elixir-coffeescript": "^1.0.2",
+    "laravel-elixir-rollup-official": "^1.0.4",
+    "laravel-elixir-stylus": "^2.0.2",
+    "laravel-elixir-vue": "^0.1.4",
+    "laravel-elixir-webpack-official": "^1.0.1",
     "mocha": "^2.4.5",
     "rimraf": "^2.5.2"
   }
