Drop dependency on gulp-util

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "homepage": "https://github.com/laravel/elixir",
   "dependencies": {
+    "chalk": "^2.3.0",
     "clean-css": "^3.4.12",
     "cli-table": "^0.3.1",
     "del": "^2.2.0",
@@ -41,10 +42,11 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
+    "minimist": "^1.2.0",
     "parse-filepath": "^1.0.1",
     "path": "^0.12.7",
     "q": "^1.4.1",
+    "replace-ext": "^1.0.0",
     "require-dir": "^0.3.2",
     "run-sequence": "^1.1.5",
     "underscore": "^1.8.3",
